# queerjs_bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
src/: api.rs  commands.rs  main.rs  store.rs
src/commands/: general.rs  mod.rs  owner.rs  roles.rs
