[package]
name = "queerjs_bot"
version = "0.1.0"
authors = ["Leah <me@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lock_api = "0.3"
parking_lot = "0.9"
