[package]
name = "queerjs_bot"
version = "0.1.0"
authors = ["Leah <me@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

dotenv = "0.15.0"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]
