[package]
name = "queerjs_bot"
version = "0.1.0"
authors = ["Leah <me@hrmny.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

dotenv = "0.15"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.serenity]
version = "0.10"
features = ["unstable_discord_api"]

[dependencies.tokio]
version = "1"
features = ["macros", "signal", "time", "rt-multi-thread"]
